# git-sim

./: .gitignore  CONTRIBUTING.md  README.md  SETUP.md  pyproject.toml  requirements-dev.txt  requirements-mcp.txt  requirements.txt
.github/workflows/: mcp-tests.yml
src/git_sim_mcp/: EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  README.md  __init__.py  __main__.py  git-sim-mcp.service  server.py  sse_server.py
tests/mcp_tests/: __init__.py  conftest.py  test_clone_repo.py  test_integration.py  test_server.py  test_smoke.py  test_sse_server.py
